[project]
name = "ckapi"
version = "2.0-rc"
description = "."
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
keywords = ["aism", "ai", "groq", "cerebras", "translate", "dataclass", "autofill", "runtime", "llm"]
readme = "README.md"
license = "MIT"
dependencies = [
    "selectolax",
    "primp",
    "rjsonc"
]

[project.urls]
"Source" = "https://github.com/AWeirdDev/aism"
"Issues" = "https://github.com/AWeirdDev/aism"
"Documentation" = "https://aism-sandy.vercel.app/docs"

[tool.pyright]
pythonVersion = '3.9'